# Z-spectra-fitting-app

./: APT_phantom.xlsx  LICENSE  README.md  config_hydrogen.toml  fit_spectra.py  gen_example_data.py  gen_paper_data.py  main.py  paper_hydrogen_data.xlsx  pyproject.toml  requirements.txt  simulate_spectra.py
APT_phantom/: best_fit.xlsx  fit_summary.txt
