[project]
name = "z-spectra-fitting-app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "jax>=0.7.0",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "numpyro>=0.18.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyqt6>=6.9.1",
    "pyqt6-sip>=13.10.2",
    "pyqtgraph>=0.13.7",
    "pyqtwaitingspinner>=1.2.6",
    "toml>=0.10.2",
]
